--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 											<ul class="submenu">
 												<li><a href="privacy.html">privacy</a></li>
 
-												<li><a href="register.html">register</a></li>
+												<!-- <li><a href="register.html">register</a></li> -->
 												<li><a href="recover.html">recover</a></li>
 											</ul>
 										</li>
 										<li><a href="about.html">About</a></li>
-										<li><a href="login.html">Login</a></li>
+										<!-- <li><a href="login.html">Login</a></li> -->
 									</ul>
 								</nav>
 							</div>
@@ -70,7 +70,7 @@
 							</div>
 
 							<div class="header-btn d-none d-md-block">
-								<a class="btn" href="#"><i class="far fa-key"></i> Login</a>
+								<a class="btn" href="./get-started.html">Get Started </a>
 							</div>
 						</div>
 						<div class="col-12">
@@ -90,19 +90,16 @@
 			</div>
 			<div class="logo-side mb-30">
 				<a href="index.html">
-					<img src="img/logo/logo.png" alt="" />
+					<!-- <img src="img/logo/logo.png" alt="" /> -->
+					Hosting
 				</a>
 			</div>
 			<div class="side-info mb-30">
 				<div class="contact-list mb-30">
 					<h4>Office Address</h4>
-					<p>123/A, Miranda City Likaoli Prikano, Dope</p>
+					<p>lagos</p>
 				</div>
-				<div class="contact-list mb-30">
-					<h4>Phone Number</h4>
-					<p>+0989 7876 9865 9</p>
-					<p>+(090) 8765 86543 85</p>
-				</div>
+				<div class="contact-list mb-30"></div>
 				<div class="contact-list mb-30">
 					<h4>Email Address</h4>
 					<p>
@@ -110,51 +107,15 @@
 							href="../../cdn-cgi/l/email-protection.html"
 							class="__cf_email__"
 							data-cfemail="422b2c242d02273a232f322e276c212d2f"
-							>[email&#160;protected]</a
-						>
-					</p>
-					<p>
-						<a
-							href="../../cdn-cgi/l/email-protection.html"
-							class="__cf_email__"
-							data-cfemail="82e7fae3eff2eee7acefe3ebeec2eaf7eface1edef"
-							>[email&#160;protected]</a
+							>email</a
 						>
 					</p>
 				</div>
 			</div>
-			<div class="instagram">
-				<a href="#">
-					<img src="img/blog/ins1.jpg" alt="" />
-				</a>
-				<a href="#">
-					<img src="img/blog/ins2.jpg" alt="" />
-				</a>
-				<a href="#">
-					<img src="img/blog/ins3.jpg" alt="" />
-				</a>
-				<a href="#">
-					<img src="img/blog/ins4.jpg" alt="" />
-				</a>
-				<a href="#">
-					<img src="img/blog/ins5.jpg" alt="" />
-				</a>
-				<a href="#">
-					<img src="img/blog/ins1.jpg" alt="" />
-				</a>
-			</div>
+
 			<div class="social-icon-right mt-20">
 				<a href="#">
 					<i class="fab fa-facebook-f"></i>
-				</a>
-				<a href="#">
-					<i class="fab fa-twitter"></i>
-				</a>
-				<a href="#">
-					<i class="fab fa-google-plus-g"></i>
-				</a>
-				<a href="#">
-					<i class="fab fa-instagram"></i>
 				</a>
 			</div>
 		</div>
@@ -185,8 +146,8 @@
 											class="slider-btn wow fadeInUp animated"
 											data-wow-delay="0.9s"
 										>
-											<a href="./register.html" class="btn">Get Started</a>
-											<a href="./share-hosting.html" class="btn btn-border"
+											<a href="./get-started.html" class="btn">Get Started</a>
+											<a href="./about.html" class="btn btn-border"
 												>Learn More</a
 											>
 										</div>
