--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
 	<body>
 		<!-- header start -->
 
+		<!-- header start -->
 		<header>
 			<div class="header-area header-transparent header-space pt-45 pb-45">
 				<div class="container-fluid">
@@ -53,91 +54,45 @@
 						>
 							<div class="logo">
 								<a href="index.html">
-									<img src="img/logo/footer-logo.png" alt="" />
+									<!-- <img src="img/logo/logo.png" alt="" /> -->
+									Dynamo Cloud
 								</a>
 							</div>
 						</div>
-
 						<div class="col-xl-6 col-lg-6 d-none d-lg-block">
-							<div class="main-menu contract-menu">
+							<div class="main-menu text-center">
 								<nav id="mobile-menu">
 									<ul>
-										<li>
-											<a class="arrow-down" href="index.html">Home</a>
-
-											<ul class="submenu">
-												<li><a href="index.html">Homepage 01</a></li>
-
-												<li><a href="index-2.html">Homepage 02</a></li>
-
-												<li><a href="index-3.html">Homepage 03</a></li>
-											</ul>
-										</li>
-
+										<li><a href="index.html">Home </a></li>
 										<li><a href="share-hosting.html">Hosting</a></li>
-
 										<li>
-											<a class="arrow-down" href="#">Pages</a>
-
+											<a href="#">Pages +</a>
 											<ul class="submenu">
-												<li><a href="about.html">About</a></li>
-
-												<li><a href="affiliate.html">Affiliate</a></li>
-
-												<li><a href="domain-search.html">Domain Search</a></li>
-
-												<li><a href="faq.html">faq</a></li>
-
 												<li><a href="privacy.html">privacy</a></li>
 
-												<li><a href="server.html">server</a></li>
-
-												<li><a href="share-hosting.html">share hosting</a></li>
-
-												<li><a href="support.html">support</a></li>
-
-												<li><a href="team.html">team</a></li>
-
-												<li><a href="whois.html">whois</a></li>
-
-												<li><a href="login.html">login</a></li>
-
-												<li><a href="register.html">register</a></li>
-
+												<!-- <li><a href="register.html">register</a></li> -->
 												<li><a href="recover.html">recover</a></li>
 											</ul>
 										</li>
-
-										<li>
-											<a class="arrow-down" href="blog.html">News</a>
-
-											<ul class="submenu">
-												<li><a href="blog.html">News Default</a></li>
-
-												<li><a href="blog-details.html">News Details</a></li>
-											</ul>
-										</li>
-
-										<li><a href="contact.html">Contact</a></li>
+										<li><a href="about.html">About</a></li>
+										<!-- <li><a href="login.html">Login</a></li> -->
 									</ul>
 								</nav>
 							</div>
 						</div>
-
 						<div
-							class="col-xl-3 col-lg-3 col-md-7 d-flex align-items-center justify-content-end"
+							class="col-xl-3 col-lg-3 col-md-7 d-flex flex-row-reverse align-items-center justify-content-xl-end"
 						>
-							<div class="header-btn f-right d-none d-md-block">
-								<a class="btn" href="#"><i class="far fa-user"></i> Sign In</a>
-							</div>
-
-							<div class="bar f-right d-none d-lg-block">
+							<div class="bar d-none d-xl-block">
 								<a class="info-bar" href="javascript:void(0);"
 									><i class="far fa-bars"></i
 								></a>
 							</div>
-						</div>
 
+							<div class="header-btn d-none d-md-block">
+								<a class="btn" href="./get-started.html">Get Started </a>
+							</div>
+						</div>
 						<div class="col-12">
 							<div class="mobile-menu"></div>
 						</div>
@@ -145,7 +100,6 @@
 				</div>
 			</div>
 		</header>
-
 		<!-- header start -->
 
 		<div class="extra-info">
@@ -154,92 +108,34 @@
 					<i class="far fa-window-close"></i>
 				</button>
 			</div>
-
 			<div class="logo-side mb-30">
 				<a href="index.html">
-					<img src="img/logo/logo.png" alt="" />
+					<!-- <img src="img/logo/logo.png" alt="" /> -->
+					Hosting
 				</a>
 			</div>
-
 			<div class="side-info mb-30">
 				<div class="contact-list mb-30">
 					<h4>Office Address</h4>
-
-					<p>123/A, Miranda City Likaoli Prikano, Dope</p>
+					<p>lagos</p>
 				</div>
-
-				<div class="contact-list mb-30">
-					<h4>Phone Number</h4>
-
-					<p>+0989 7876 9865 9</p>
-
-					<p>+(090) 8765 86543 85</p>
-				</div>
-
+				<div class="contact-list mb-30"></div>
 				<div class="contact-list mb-30">
 					<h4>Email Address</h4>
-
 					<p>
 						<a
 							href="../../cdn-cgi/l/email-protection.html"
 							class="__cf_email__"
-							data-cfemail="fd94939b92bd98859c908d9198d39e9290"
-							>[email&#160;protected]</a
-						>
-					</p>
-
-					<p>
-						<a
-							href="../../cdn-cgi/l/email-protection.html"
-							class="__cf_email__"
-							data-cfemail="f7928f969a879b92d99a969e9bb79f829ad994989a"
-							>[email&#160;protected]</a
+							data-cfemail="422b2c242d02273a232f322e276c212d2f"
+							>email</a
 						>
 					</p>
 				</div>
-			</div>
-
-			<div class="instagram">
-				<a href="#">
-					<img src="img/blog/ins1.jpg" alt="" />
-				</a>
-
-				<a href="#">
-					<img src="img/blog/ins2.jpg" alt="" />
-				</a>
-
-				<a href="#">
-					<img src="img/blog/ins3.jpg" alt="" />
-				</a>
-
-				<a href="#">
-					<img src="img/blog/ins4.jpg" alt="" />
-				</a>
-
-				<a href="#">
-					<img src="img/blog/ins5.jpg" alt="" />
-				</a>
-
-				<a href="#">
-					<img src="img/blog/ins1.jpg" alt="" />
-				</a>
 			</div>
 
 			<div class="social-icon-right mt-20">
 				<a href="#">
 					<i class="fab fa-facebook-f"></i>
-				</a>
-
-				<a href="#">
-					<i class="fab fa-twitter"></i>
-				</a>
-
-				<a href="#">
-					<i class="fab fa-google-plus-g"></i>
-				</a>
-
-				<a href="#">
-					<i class="fab fa-instagram"></i>
 				</a>
 			</div>
 		</div>
