--- a/share-hosting.html
+++ b/share-hosting.html
@@ -43,7 +43,6 @@
 
 	<body>
 		<!-- header start -->
-
 		<header>
 			<div class="header-area header-transparent header-space pt-45 pb-45">
 				<div class="container-fluid">
@@ -53,91 +52,45 @@
 						>
 							<div class="logo">
 								<a href="index.html">
-									<img src="img/logo/footer-logo.png" alt="" />
+									<!-- <img src="img/logo/logo.png" alt="" /> -->
+									Dynamo Cloud
 								</a>
 							</div>
 						</div>
-
 						<div class="col-xl-6 col-lg-6 d-none d-lg-block">
-							<div class="main-menu contract-menu">
+							<div class="main-menu text-center">
 								<nav id="mobile-menu">
 									<ul>
-										<li>
-											<a class="arrow-down" href="index.html">Home</a>
-
-											<ul class="submenu">
-												<li><a href="index.html">Homepage 01</a></li>
-
-												<li><a href="index-2.html">Homepage 02</a></li>
-
-												<li><a href="index-3.html">Homepage 03</a></li>
-											</ul>
-										</li>
-
+										<li><a href="index.html">Home </a></li>
 										<li><a href="share-hosting.html">Hosting</a></li>
-
 										<li>
-											<a class="arrow-down" href="#">Pages</a>
-
+											<a href="#">Pages +</a>
 											<ul class="submenu">
-												<li><a href="about.html">About</a></li>
-
-												<li><a href="affiliate.html">Affiliate</a></li>
-
-												<li><a href="domain-search.html">Domain Search</a></li>
-
-												<li><a href="faq.html">faq</a></li>
-
 												<li><a href="privacy.html">privacy</a></li>
 
-												<li><a href="server.html">server</a></li>
-
-												<li><a href="share-hosting.html">share hosting</a></li>
-
-												<li><a href="support.html">support</a></li>
-
-												<li><a href="team.html">team</a></li>
-
-												<li><a href="whois.html">whois</a></li>
-
-												<li><a href="login.html">login</a></li>
-
-												<li><a href="register.html">register</a></li>
-
+												<!-- <li><a href="register.html">register</a></li> -->
 												<li><a href="recover.html">recover</a></li>
 											</ul>
 										</li>
-
-										<li>
-											<a class="arrow-down" href="blog.html">News</a>
-
-											<ul class="submenu">
-												<li><a href="blog.html">News Default</a></li>
-
-												<li><a href="blog-details.html">News Details</a></li>
-											</ul>
-										</li>
-
-										<li><a href="contact.html">Contact</a></li>
+										<li><a href="about.html">About</a></li>
+										<!-- <li><a href="login.html">Login</a></li> -->
 									</ul>
 								</nav>
 							</div>
 						</div>
-
 						<div
-							class="col-xl-3 col-lg-3 col-md-7 d-flex align-items-center justify-content-end"
+							class="col-xl-3 col-lg-3 col-md-7 d-flex flex-row-reverse align-items-center justify-content-xl-end"
 						>
-							<div class="header-btn f-right d-none d-md-block">
-								<a class="btn" href="#"><i class="far fa-user"></i> Sign In</a>
-							</div>
-
-							<div class="bar f-right d-none d-lg-block">
+							<div class="bar d-none d-xl-block">
 								<a class="info-bar" href="javascript:void(0);"
 									><i class="far fa-bars"></i
 								></a>
 							</div>
-						</div>
 
+							<div class="header-btn d-none d-md-block">
+								<a class="btn" href="./get-started.html">Get Started </a>
+							</div>
+						</div>
 						<div class="col-12">
 							<div class="mobile-menu"></div>
 						</div>
@@ -145,8 +98,45 @@
 				</div>
 			</div>
 		</header>
-
 		<!-- header start -->
+
+		<div class="extra-info">
+			<div class="close-icon">
+				<button>
+					<i class="far fa-window-close"></i>
+				</button>
+			</div>
+			<div class="logo-side mb-30">
+				<a href="index.html">
+					<!-- <img src="img/logo/logo.png" alt="" /> -->
+					Hosting
+				</a>
+			</div>
+			<div class="side-info mb-30">
+				<div class="contact-list mb-30">
+					<h4>Office Address</h4>
+					<p>lagos</p>
+				</div>
+				<div class="contact-list mb-30"></div>
+				<div class="contact-list mb-30">
+					<h4>Email Address</h4>
+					<p>
+						<a
+							href="../../cdn-cgi/l/email-protection.html"
+							class="__cf_email__"
+							data-cfemail="422b2c242d02273a232f322e276c212d2f"
+							>email</a
+						>
+					</p>
+				</div>
+			</div>
+
+			<div class="social-icon-right mt-20">
+				<a href="#">
+					<i class="fab fa-facebook-f"></i>
+				</a>
+			</div>
+		</div>
 
 		<main>
 			<!-- breadcrumb-area-start -->
