hosting  clean up

--- a/about.html
+++ b/about.html
@@ -695,197 +695,124 @@
 
 		<!-- footer start -->
 
+		<!-- footer start -->
 		<footer>
 			<section
-				class="footer-area pt-110 pb-90 bg-footer"
+				class="footer-area pb-90 bg-footer"
 				data-background="img/bg/footer-bg.jpg"
 			>
 				<div class="container">
 					<div
 						class="row d-flex justify-content-start justify-content-md-between align-items-center"
-					>
-						<div class="col-xl-6 col-lg-6">
-							<div class="footer-sing-up mb-30">
-								<h5>Get an easy quote</h5>
-
-								<h2>Sign Up For Web Hosting Today!</h2>
-							</div>
-						</div>
-
-						<div class="col-xl-3 col-md-5 col-lg-3">
-							<div class="footer-left-info mb-30">
-								<h5>Starting At Only</h5>
-
-								<h2>$2.75<span>/mo*</span></h2>
-							</div>
-						</div>
-
-						<div class="col-xl-3 col-md-7 col-lg-3">
-							<div class="footer-btn mb-30">
-								<a href="#" class="btn btn-grad">Get Start Now</a>
-							</div>
-						</div>
-					</div>
-
+					></div>
 					<div class="footer-border"></div>
-
 					<div class="row d-flex justify-content-between">
 						<div class="col-xl-4 col-lg-4 mb-30">
 							<div class="footer-bottom-area">
 								<div class="widgets">
 									<div class="footer-logo">
-										<img src="img/logo/logo.png" alt="" />
+										<!-- <img src="img/logo/logo.png" alt="" /> -->
+										Dynamo Cloud
 									</div>
-
-									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-										sed do eiusmod tempor incididunt ut labore et dolore magna.
-									</p>
-
+									<p>Top-tier web hosting solutions for your website</p>
 									<ul class="adress">
 										<li>
 											<i class="fa fa-map-marker-alt"></i>
-											<span>12/A, Hamilton City Way, Newyork, US</span>
+											<span> Lagos, NG</span>
 										</li>
-
 										<li>
 											<i class="fa fa-envelope"></i>
 											<span
 												><a
 													href="../../cdn-cgi/l/email-protection.html"
 													class="__cf_email__"
-													data-cfemail="761f18101936130e171b061a130113145815191b"
-													>[email&#160;protected]</a
+													data-cfemail="d1b8bfb7be91b4a9b0bca1bdb4a6b4b3ffb2bebc"
+													>email</a
 												></span
 											>
 										</li>
-
-										<li>
-											<i class="fa fa-phone"></i> <span>+8987 5675 754 6</span>
-										</li>
-
+										<li><i class="fa fa-phone"></i> <span>234 00000</span></li>
 										<li>
 											<i class="fa fa-globe"> </i>
-											<span>www.webexample.com</span>
+											<!-- <span>www.webexample.com</span> -->
 										</li>
 									</ul>
 								</div>
 							</div>
-
 							<div class="footer-social text-center">
 								<a href="#"><i class="fab fa-facebook"></i></a>
-
-								<a href="#"><i class="fab fa-twitter"></i></a>
-
+								<!-- <a href="#"><i class="fab fa-twitter"></i></a>
 								<a href="#"><i class="fab fa-behance"></i></a>
-
 								<a href="#"><i class="fab fa-linkedin"></i></a>
-
-								<a href="#"><i class="fab fa-youtube"></i></a>
+								<a href="#"><i class="fab fa-youtube"></i></a> -->
 							</div>
 						</div>
-
 						<div class="col-xl-8 col-lg-8">
 							<div class="footer-right-box pl-70">
 								<div class="row">
 									<div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
-												<h4>Our Products</h4>
+												<h4 style="color: black">Resources</h4>
 											</div>
-
 											<div class="wegets-body">
 												<ul>
-													<li><a href="#">Shared</a></li>
-
-													<li><a href="#">hosting</a></li>
-
-													<li><a href="#">WordPress</a></li>
-
-													<li><a href="#">VPS</a></li>
-
-													<li><a href="#">hosting</a></li>
-
-													<li><a href="#">Dedicated</a></li>
+													<li><a href="./privacy.html">Privacy policy</a></li>
+													<li><a href="./share-hosting.html">hosting</a></li>
 												</ul>
 											</div>
 										</div>
 									</div>
-
 									<div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
-												<h4>Get Support</h4>
+												<h4 style="color: black">Get Support</h4>
 											</div>
-
 											<div class="wegets-body">
 												<ul>
-													<li><a href="#">Shared</a></li>
-
-													<li><a href="#">hosting</a></li>
-
+													<li><a href="#">Email</a></li>
+													<!-- <li><a href="#">hosting</a></li>
 													<li><a href="#">WordPress</a></li>
-
 													<li><a href="#">VPS</a></li>
-
 													<li><a href="#">hosting</a></li>
-
-													<li><a href="#">Dedicated</a></li>
+													<li><a href="#">Dedicated</a></li> -->
 												</ul>
 											</div>
 										</div>
 									</div>
-
 									<div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
-												<h4>Our Company</h4>
+												<h4 style="color: black">Our Company</h4>
 											</div>
-
 											<div class="wegets-body">
 												<ul>
-													<li><a href="#">Chat</a></li>
-
-													<li><a href="#">Tickets</a></li>
-
+													<li><a href="./about.html">About</a></li>
+													<!-- <li><a href="#">Tickets</a></li>
 													<li><a href="#">Knowledge</a></li>
-
 													<li><a href="#">base</a></li>
-
 													<li><a href="#">System</a></li>
-
-													<li><a href="#">Marketing</a></li>
+													<li><a href="#">Marketing</a></li> -->
 												</ul>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-
 							<div class="row">
 								<div class="col-xl-8">
 									<div class="footer-text">
-										<p>
-											The promotional price is for the first term only and
-											renews.30-Day Money-Back Guarantee does not extend to
-											domain names.
-										</p>
+										<p></p>
 									</div>
 								</div>
-
-								<div class="col-xl-4">
-									<div class="footer-orange-btn text-left text-xl-right">
-										<a href="#" class="btn"
-											><i class="fa fa-users"></i> Reffer A Friend!</a
-										>
-									</div>
-								</div>
+								<div class="col-xl-4"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 		</footer>
+		<!-- footer end -->
 
 		<!-- footer end -->
 
