--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-		<title>Piohost - Domain and Web Hosting HTML5 Template</title>
+		<title>Dynamo Cloud Ltd -</title>
 
 		<meta name="description" content="" />
 
