--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="manifest" href="site.webmanifest.html" />
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+		<!-- <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" /> -->
 		<!-- Place favicon.png in the root directory -->
 
 		<!-- CSS here -->
