--- a/index.html
+++ b/index.html
@@ -45,15 +45,7 @@
 									<ul>
 										<li><a href="index.html">Home </a></li>
 										<li><a href="share-hosting.html">Hosting</a></li>
-										<li>
-											<a href="#">Pages +</a>
-											<ul class="submenu">
-												<li><a href="privacy.html">privacy</a></li>
 
-												<!-- <li><a href="register.html">register</a></li> -->
-												<li><a href="recover.html">recover</a></li>
-											</ul>
-										</li>
 										<li><a href="about.html">About</a></li>
 										<!-- <li><a href="login.html">Login</a></li> -->
 									</ul>
@@ -208,9 +200,9 @@
 										Affordable and reliable shared hosting to kickstart your
 										online journey. Get started today!
 									</p>
-									<a class="services-link" href="#"
+									<!-- <a class="services-link" href="#"
 										><i class="far fa-chevron-right"></i
-									></a>
+									></a> -->
 								</div>
 							</div>
 						</div>
@@ -228,9 +220,9 @@
 										Experience the power and control of VPS hosting. Elevate
 										your website with our scalable solutions.
 									</p>
-									<a class="services-link" href="#"
+									<!-- <a class="services-link" href="#"
 										><i class="far fa-chevron-right"></i
-									></a>
+									></a> -->
 								</div>
 							</div>
 						</div>
@@ -249,9 +241,9 @@
 										hosting empowers you to offer hosting services to others
 										with ease.
 									</p>
-									<a class="services-link" href="#"
+									<!-- <a class="services-link" href="#"
 										><i class="far fa-chevron-right"></i
-									></a>
+									></a> -->
 								</div>
 							</div>
 						</div>
@@ -270,9 +262,9 @@
 										scalable hosting solutions. Experience excellence in cloud
 										hosting.
 									</p>
-									<a class="services-link" href="#"
+									<!-- <a class="services-link" href="#"
 										><i class="far fa-chevron-right"></i
-									></a>
+									></a> -->
 								</div>
 							</div>
 						</div>
@@ -290,9 +282,9 @@
 										Maximize your website's performance with dedicated hosting.
 										Your website, your server – for peak performance.
 									</p>
-									<a class="services-link" href="#"
+									<!-- <a class="services-link" href="#"
 										><i class="far fa-chevron-right"></i
-									></a>
+									></a> -->
 								</div>
 							</div>
 						</div>
@@ -310,9 +302,9 @@
 										Find your perfect domain name and claim your online
 										identity. It's easy with us.
 									</p>
-									<a class="services-link" href="#"
+									<!-- <a class="services-link" href="#"
 										><i class="far fa-chevron-right"></i
-									></a>
+									></a> -->
 								</div>
 							</div>
 						</div>
