--- a/share-hosting.html
+++ b/share-hosting.html
@@ -6,7 +6,7 @@
 
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-		<title>Piohost - Domain and Web Hosting HTML5 Template</title>
+		<title>Dynamo Cloud</title>
 
 		<meta name="description" content="" />
 
@@ -63,15 +63,7 @@
 									<ul>
 										<li><a href="index.html">Home </a></li>
 										<li><a href="share-hosting.html">Hosting</a></li>
-										<li>
-											<a href="#">Pages +</a>
-											<ul class="submenu">
-												<li><a href="privacy.html">privacy</a></li>
 
-												<!-- <li><a href="register.html">register</a></li> -->
-												<li><a href="recover.html">recover</a></li>
-											</ul>
-										</li>
 										<li><a href="about.html">About</a></li>
 										<!-- <li><a href="login.html">Login</a></li> -->
 									</ul>
@@ -192,7 +184,7 @@
 									<h3>Data Migration</h3>
 
 									<p>
-										PioHosting flexible Managed Backup Solutions will help
+										Dynamo Clouding flexible Managed Backup Solutions will help
 										simplify the protection of your data.
 									</p>
 								</div>
@@ -209,7 +201,7 @@
 									<h3>DDoS Protection</h3>
 
 									<p>
-										PioHosting flexible Managed Backup Solutions will help
+										Dynamo Clouding flexible Managed Backup Solutions will help
 										simplify the protection of your data.
 									</p>
 								</div>
@@ -226,7 +218,7 @@
 									<h3>Data Security</h3>
 
 									<p>
-										PioHosting flexible Managed Backup Solutions will help
+										Dynamo Clouding flexible Managed Backup Solutions will help
 										simplify the protection of your data.
 									</p>
 								</div>
