--- a/get-started.html
+++ b/get-started.html
@@ -6,7 +6,7 @@
 
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-		<title>Piohost - Domain and Web Hosting HTML5 Template</title>
+		<title>Dynamo Cloud</title>
 
 		<meta name="description" content="" />
 
@@ -63,15 +63,7 @@
 									<ul>
 										<li><a href="index.html">Home </a></li>
 										<li><a href="share-hosting.html">Hosting</a></li>
-										<li>
-											<a href="#">Pages +</a>
-											<ul class="submenu">
-												<li><a href="privacy.html">privacy</a></li>
 
-												<!-- <li><a href="register.html">register</a></li> -->
-												<li><a href="recover.html">recover</a></li>
-											</ul>
-										</li>
 										<li><a href="about.html">About</a></li>
 										<!-- <li><a href="login.html">Login</a></li> -->
 									</ul>
@@ -181,26 +173,10 @@
 										type="text"
 										placeholder="Enter Username or Email address..."
 									/>
+									<input id="name" type="text" placeholder=" First name" />
+									<input id="name" type="text" placeholder="Last name" />
 
-									<label for="pass">Password <span>**</span></label>
-
-									<input
-										id="pass"
-										type="password"
-										placeholder="Enter password..."
-									/>
-
-									<div class="login-action mb-20 fix">
-										<span class="log-rem f-left">
-											<input id="remember" type="checkbox" />
-
-											<label for="remember">Remember me!</label>
-										</span>
-
-										<span class="forgot-login f-right">
-											<a href="#">Lost your password?</a>
-										</span>
-									</div>
+									<div class="login-action mb-20 fix"></div>
 
 									<button class="btn btn-2 btn-black w-100">Submit</button>
 								</form>
