--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
 
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-		<title>Piohost - Domain and Web Hosting HTML5 Template</title>
+		<title>Dynamo Cloud</title>
 
 		<meta name="description" content="" />
 
@@ -63,15 +63,7 @@
 									<ul>
 										<li><a href="index.html">Home </a></li>
 										<li><a href="share-hosting.html">Hosting</a></li>
-										<li>
-											<a href="#">Pages +</a>
-											<ul class="submenu">
-												<li><a href="privacy.html">privacy</a></li>
 
-												<!-- <li><a href="register.html">register</a></li> -->
-												<li><a href="recover.html">recover</a></li>
-											</ul>
-										</li>
 										<li><a href="about.html">About</a></li>
 										<!-- <li><a href="login.html">Login</a></li> -->
 									</ul>
