--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 								<div class="price-body">
 									<h2><span>$</span> 17 <span class="month">/mo</span></h2>
 									<p>
-										Dynamo Cloud Ltding offers hosting plans that are secure,
+										Dynamo Cloud Ltd offers hosting plans that are secure,
 										reliable, and performing for just $580.58/year.
 									</p>
 								</div>
@@ -403,7 +403,7 @@
 					<div class="row">
 						<div class="col-12">
 							<div class="pricing-more-link text-center mt-50">
-								<p>To subscriptions please <a href="#">click here</a></p>
+								<p>For subscriptions please <a href="#">click here</a></p>
 							</div>
 						</div>
 					</div>
