--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 									<h3>Cloud Hosting</h3>
 								</div>
 								<div class="price-body">
-									<h2><span>$</span> 34 <span class="month">/mo</span></h2>
+									<h2><span>N</span> 34,000 <span class="month">/mo</span></h2>
 									<p>
 										Dynamo Cloud Ltding offers hosting plans that are secure,
 										reliable, and performing for just $580.58/year.
@@ -365,7 +365,7 @@
 									<h3>VPS Hosting</h3>
 								</div>
 								<div class="price-body">
-									<h2><span>$</span> 46 <span class="month">/mo</span></h2>
+									<h2><span>N</span> 46,000 <span class="month">/mo</span></h2>
 									<p>
 										Dynamo Cloud Ltding offers hosting plans that are secure,
 										reliable, and performing for just $580.58/year.
@@ -388,7 +388,7 @@
 									<h3>Shared Hosting</h3>
 								</div>
 								<div class="price-body">
-									<h2><span>$</span> 17 <span class="month">/mo</span></h2>
+									<h2><span>N</span> 17,000 <span class="month">/mo</span></h2>
 									<p>
 										Dynamo Cloud Ltd offers hosting plans that are secure,
 										reliable, and performing for just $580.58/year.
@@ -403,7 +403,10 @@
 					<div class="row">
 						<div class="col-12">
 							<div class="pricing-more-link text-center mt-50">
-								<p>For subscriptions please <a href="#">click here</a></p>
+								<p>
+									For subscriptions please
+									<a href="./get-started.html">click here</a>
+								</p>
 							</div>
 						</div>
 					</div>
