mostly done hosting page

--- a/share-hosting.html
+++ b/share-hosting.html
@@ -289,13 +289,7 @@
 										<div class="col-xl-3 col-lg-3 col-mg-4 d-none d-lg-block">
 											<div class="price-sidebar mb-30">
 												<ul>
-													<li>Teams<i class="fal fa-plus"></i></li>
-
-													<li>Users<i class="fal fa-plus"></i></li>
-
 													<li>Bandwidth<i class="fal fa-plus"></i></li>
-
-													<li>Hosting<i class="fal fa-plus"></i></li>
 
 													<li>Speed<i class="fal fa-plus"></i></li>
 
@@ -303,7 +297,7 @@
 
 													<li>Email<i class="fal fa-plus"></i></li>
 
-													<li>Domain<i class="fal fa-plus"></i></li>
+													<li>Subdomain<i class="fal fa-plus"></i></li>
 												</ul>
 											</div>
 										</div>
@@ -313,25 +307,15 @@
 												<div class="price-details">
 													<span>Basic</span>
 
-													<h4 class="price"><sub>$</sub>56<sub>.00</sub></h4>
+													<h4 class="price"><sub>N</sub>1,500<sub>.00</sub></h4>
 
 													<a class="btn price-btn" href="#">Create Account</a>
 												</div>
 
 												<ul class="price-content">
-													<li>10 <span class="price-list-name">Teams</span></li>
-
 													<li>
-														120 <span class="price-list-name">Users</span>
-													</li>
-
-													<li>
-														60mbps
+														30GB
 														<span class="price-list-name">Bandwidth</span>
-													</li>
-
-													<li>
-														100GB <span class="price-list-name">Hosting</span>
 													</li>
 
 													<li>
@@ -339,15 +323,15 @@
 													</li>
 
 													<li>
-														5TB <span class="price-list-name">Storage</span>
+														6GB <span class="price-list-name">Storage</span>
 													</li>
 
 													<li>
-														500 <span class="price-list-name">Email</span>
+														Unlimited <span class="price-list-name">Email</span>
 													</li>
 
 													<li>
-														100 <span class="price-list-name">Domain</span>
+														10 <span class="price-list-name">Subdomain</span>
 													</li>
 												</ul>
 											</div>
@@ -358,25 +342,15 @@
 												<div class="price-details">
 													<span>Core</span>
 
-													<h4 class="price"><sub>$</sub>99<sub>.00</sub></h4>
+													<h4 class="price"><sub>N</sub>3,300<sub>.00</sub></h4>
 
 													<a class="btn price-btn" href="#">Purchase Now</a>
 												</div>
 
 												<ul class="price-content">
-													<li>10 <span class="price-list-name">Teams</span></li>
-
 													<li>
-														220 <span class="price-list-name">Users</span>
-													</li>
-
-													<li>
-														100mbps
+														Unlimited
 														<span class="price-list-name">Bandwidth</span>
-													</li>
-
-													<li>
-														150GB <span class="price-list-name">Hosting</span>
 													</li>
 
 													<li>
@@ -384,15 +358,15 @@
 													</li>
 
 													<li>
-														512TB <span class="price-list-name">Storage</span>
+														25GB <span class="price-list-name">Storage</span>
 													</li>
 
 													<li>
-														800 <span class="price-list-name">Email</span>
+														Unlimited <span class="price-list-name">Email</span>
 													</li>
 
 													<li>
-														300 <span class="price-list-name">Domain</span>
+														20 <span class="price-list-name">Subdomain</span>
 													</li>
 												</ul>
 											</div>
@@ -403,25 +377,15 @@
 												<div class="price-details">
 													<span>Advanced</span>
 
-													<h4 class="price"><sub>$</sub>289<sub>.00</sub></h4>
+													<h4 class="price"><sub>N</sub>1,900<sub>.00</sub></h4>
 
 													<a class="btn price-btn" href="#">Create Account</a>
 												</div>
 
 												<ul class="price-content">
-													<li>66 <span class="price-list-name">Teams</span></li>
-
 													<li>
-														236 <span class="price-list-name">Users</span>
-													</li>
-
-													<li>
-														80mbps
+														45GB
 														<span class="price-list-name">Bandwidth</span>
-													</li>
-
-													<li>
-														500GB <span class="price-list-name">Hosting</span>
 													</li>
 
 													<li>
@@ -429,15 +393,15 @@
 													</li>
 
 													<li>
-														30TB <span class="price-list-name">Storage</span>
+														12GB <span class="price-list-name">Storage</span>
 													</li>
 
 													<li>
-														900 <span class="price-list-name">Email</span>
+														Unlimited <span class="price-list-name">Email</span>
 													</li>
 
 													<li>
-														1200 <span class="price-list-name">Domain</span>
+														15 <span class="price-list-name">Subdomain</span>
 													</li>
 												</ul>
 											</div>
@@ -455,13 +419,7 @@
 										<div class="col-xl-3 col-lg-3 col-mg-4 d-none d-lg-block">
 											<div class="price-sidebar mb-30">
 												<ul>
-													<li>Teams<i class="fal fa-plus"></i></li>
-
-													<li>Users<i class="fal fa-plus"></i></li>
-
 													<li>Bandwidth<i class="fal fa-plus"></i></li>
-
-													<li>Hosting<i class="fal fa-plus"></i></li>
 
 													<li>Speed<i class="fal fa-plus"></i></li>
 
@@ -479,25 +437,19 @@
 												<div class="price-details">
 													<span>Basic</span>
 
-													<h4 class="price"><sub>$</sub>88<sub>.00</sub></h4>
+													<h4 class="price">
+														<sub>N</sub>15,000<sub>.00</sub>
+													</h4>
 
 													<a class="btn price-btn" href="#">Create Account</a>
 												</div>
 
 												<ul class="price-content">
-													<li>10 <span class="price-list-name">Teams</span></li>
+													<!-- <li>10 <span class="price-list-name">Teams</span></li> -->
 
 													<li>
-														120 <span class="price-list-name">Users</span>
-													</li>
-
-													<li>
-														60mbps
+														35GB
 														<span class="price-list-name">Bandwidth</span>
-													</li>
-
-													<li>
-														100GB <span class="price-list-name">Hosting</span>
 													</li>
 
 													<li>
@@ -505,15 +457,15 @@
 													</li>
 
 													<li>
-														5TB <span class="price-list-name">Storage</span>
+														6GB <span class="price-list-name">Storage</span>
 													</li>
 
 													<li>
-														500 <span class="price-list-name">Email</span>
+														Unlimited <span class="price-list-name">Email</span>
 													</li>
 
 													<li>
-														100 <span class="price-list-name">Domain</span>
+														10 <span class="price-list-name">Subdomain</span>
 													</li>
 												</ul>
 											</div>
@@ -524,25 +476,19 @@
 												<div class="price-details">
 													<span>Core</span>
 
-													<h4 class="price"><sub>$</sub>120<sub>.00</sub></h4>
+													<h4 class="price">
+														<sub>N</sub>33,000<sub>.00</sub>
+													</h4>
 
 													<a class="btn price-btn" href="#">Purchase Now</a>
 												</div>
 
 												<ul class="price-content">
-													<li>10 <span class="price-list-name">Teams</span></li>
+													<!-- <li>10 <span class="price-list-name">Teams</span></li> -->
 
 													<li>
-														220 <span class="price-list-name">Users</span>
-													</li>
-
-													<li>
-														100mbps
+														Unlimited
 														<span class="price-list-name">Bandwidth</span>
-													</li>
-
-													<li>
-														150GB <span class="price-list-name">Hosting</span>
 													</li>
 
 													<li>
@@ -550,15 +496,15 @@
 													</li>
 
 													<li>
-														512TB <span class="price-list-name">Storage</span>
+														25GB <span class="price-list-name">Storage</span>
 													</li>
 
 													<li>
-														800 <span class="price-list-name">Email</span>
+														Unlimited <span class="price-list-name">Email</span>
 													</li>
 
 													<li>
-														300 <span class="price-list-name">Domain</span>
+														20 <span class="price-list-name">Subdomain</span>
 													</li>
 												</ul>
 											</div>
@@ -569,25 +515,15 @@
 												<div class="price-details">
 													<span>Advanced</span>
 
-													<h4 class="price"><sub>$</sub>320<sub>.00</sub></h4>
+													<h4 class="price"><sub>N</sub>19,00<sub>.00</sub></h4>
 
 													<a class="btn price-btn" href="#">Create Account</a>
 												</div>
 
 												<ul class="price-content">
-													<li>66 <span class="price-list-name">Teams</span></li>
-
 													<li>
-														236 <span class="price-list-name">Users</span>
-													</li>
-
-													<li>
-														80mbps
+														45GB
 														<span class="price-list-name">Bandwidth</span>
-													</li>
-
-													<li>
-														500GB <span class="price-list-name">Hosting</span>
 													</li>
 
 													<li>
@@ -595,15 +531,15 @@
 													</li>
 
 													<li>
-														30TB <span class="price-list-name">Storage</span>
+														12GB <span class="price-list-name">Storage</span>
 													</li>
 
 													<li>
-														900 <span class="price-list-name">Email</span>
+														Unlimited <span class="price-list-name">Email</span>
 													</li>
 
 													<li>
-														1200 <span class="price-list-name">Domain</span>
+														15 <span class="price-list-name">Subdomain</span>
 													</li>
 												</ul>
 											</div>
